# api/docs/swagger.yaml
@@ -1382,26 +1382,4 @@ paths:
       summary: Stream status
       tags:
       - streams
-  /streams/{code}/stop:
-    post:
-      parameters:
-      - description: Stream code
-        in: path
-        name: code
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/apidocs.StreamActionData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/apidocs.ErrorBody'
-      summary: Stop stream pipeline
-      tags:
-      - streams
 swagger: "2.0"
